Update author name in package.json

--- a/project/package.json
+++ b/project/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "this is a node parctise",
   "license": "ISC",
-  "author": "PHYO THIRI KHAING",
+  "author": "LIN LETT",
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
