--- a/project/package.json
+++ b/project/package.json
@@ -1,21 +1,19 @@
 {
   "name": "nodejs-learning",
   "version": "1.0.0",
-  "description": "this is a node parctise",
+  "description": "this is a node practice",
   "license": "ISC",
   "author": "LIN LETT",
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "cahlk": "^0.0.1-security",
+    "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
     "ejs": "^3.1.10",
-    "express": "^5.1.0",
-    "http": "^0.0.1-security"
+    "express": "^4.18.2"
   },
   "keywords": []
 }
